Working video gallery obtaining everything (video_id, video_source, thumbnail) just from video url

--- a/index.html
+++ b/index.html
@@ -20,60 +20,56 @@
  	<nav id="navbar">
  		<h2 id="brand">VIDEO GALLERY</h2>
  		
+ 		
+ 		 
+
  	</nav>
 
 	<div id="container">
 		<div id="main-video">
-			<iframe id="vdo" name="iframe" width="560" height="315" src="http://www.youtube.com/embed/-0zo3vbqJOE?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+			<iframe id="vdo" name="iframe" width="640" height="360" src="" frameborder="0" allowfullscreen></iframe>
 		</div>
 
 		<div id="thumbnail">
-			<div class="thumb">
-				<img src="img/1.jpg" name="90299717" video-src="vimeo">
-			</div>
-			<div class="thumb">
-				<img src="img/2.jpg" name="NUsoVlDFqZg" video-src="youtube">
-			</div>
-			<div class="thumb">
-				<img src="img/3.jpg" name="0KSOMA3QBU0" video-src="youtube">
-			</div>
-			<div class="thumb">
-				<img src="img/4.jpg" name="93972085" video-src="vimeo">
-			</div>
-			<div class="thumb">
-				<img src="img/5.jpg" name="HkMNOlYcpHg" video-src="youtube">
-			</div>
-			<div class="thumb">
-				<img src="img/6.jpg" name="TGtWWb9emYI" video-src="youtube">
-			</div>
-			<div class="thumb">
-				<img src="img/7.jpg" name="7-7knsP2n5w" video-src="youtube">
-			</div>
+
 		</div>
 	</div>	
- 	q
+ 	
  <script type="text/javascript">
 
+ 	var links = ["http://vimeo.com/90299717", "http://www.youtube.com/watch?v=NUsoVlDFqZg",
+				 "http://www.youtube.com/watch?v=0KSOMA3QBU0", "http://vimeo.com/93972085",
+				 "http://www.youtube.com/watch?v=HkMNOlYcpHg", "http://www.youtube.com/watch?v=TGtWWb9emYI",
+				 "http://www.youtube.com/watch?v=7-7knsP2n5w"]
+	
+
+	//Generating and playing random video everytime page is loaded
+	var random_link = select_random_video(links);
+	$("#vdo").attr("src", random_link);
+ 	$("iframe").load()
+
+	for(var i=0; i<links.length; i++)
+	{
+		var url_details = video_details(links[i]);
+		var div = '<div class="thumb"><img src="' + url_details[1] + '" name="' + url_details[0] + '" video-src="' + url_details[2] + '" /></div>'
+
+		$("#thumbnail").append(div);
+	}
+
+	//Channgin the playing video to the one clicked 
  	$(".thumb img").click(function()
  	{
- 		
- 		x = get_vimeo_video_id("http://www.vimeo.com/90299717")
- 		alert(x.video_id);
  		var video_id = $(this).attr("name");
  		var video_source = $(this).attr("video-src");
  		var link = create_embedded_link(video_id, video_source);
  		$("#vdo").attr("src", link);
  		$("iframe").load()
-
- 		
-
  	});
 
 
- 	/*************************************************
- 	  Create Embedded link from regular video url for 
- 	  embedding it to to the video container 
- 	************************************************/
+ 	/***************************************************************************************
+ 	  Create Embedded link from regular video url for embedding it to to the video container 
+ 	****************************************************************************************/
  	function create_embedded_link(video_id, source)
  	{
  		var url = "";
@@ -89,6 +85,9 @@
  		return url;
  	}
 
+ 	/***************************************************************************************
+ 	  Using regular expressing extracting video id of youtube video from its url
+ 	****************************************************************************************/
  	function get_youtube_video_id(url)
  	{
  		var regExp = /^.*((youtu.be\/)|(v\/)|(\/u\/\w\/)|(embed\/)|(watch\?))\??v?=?([^#\&\?]*).*/;
@@ -104,20 +103,34 @@
 	    }
  	}
 
+ 	/***************************************************************************************
+ 	  obtaining thumbnail and video id of video from vimeo video url (using vimeo api) 
+ 	****************************************************************************************/
  	function get_vimeo_video_id_and_thumb(url)
  	{
  		var json_url = "http://vimeo.com/api/oembed.json?url=" + url;
- 		var video_info = {};
+ 		var result;
+ 		var vdo_details = {};
 
- 		$.get(json_url, function(data)
+ 		$.ajax(
  		{
- 			video_info.video_id = data["video_id"];
- 			video_info.thumbnail = data["thumbnail_url"];
-
- 			return video_info;
+ 			url: json_url,
+ 			async: false,
+ 			success: function(data)
+ 			{
+ 				result = data;
+ 			}
  		});
+
+ 		vdo_details.video_id = result.video_id;
+ 		vdo_details.thumb =  result.thumbnail_url;
+
+ 		return vdo_details;
  	}
 
+ 	/***************************************************************************************
+ 	  Idetyfying source of video whether its youtube or vimeo from video url
+ 	****************************************************************************************/
  	function identify_video_source(url)
  	{
  		var video_source = "";
@@ -129,13 +142,48 @@
  		return video_source;
  	}
 
+ 	/***************************************************************************************
+ 	  Creating thumbnail url for any youtube video with its Video Id
+ 	****************************************************************************************/
  	function get_youtube_thumbnail(video_id)
  	{
  		var img_url = "http://img.youtube.com/vi/" + video_id + "/0.jpg";
  		return img_url;
  	}
- 		
  	
+ 	/***************************************************************************************
+ 	  Using all the created functions identifying video source, obtaining the thumbnail image, and 
+ 	  video id from the url of video and returning it as an array
+ 	****************************************************************************************/
+ 	function video_details(url)
+ 	{
+ 		var src = identify_video_source(url);
+ 		var details = [];
+ 		if(src=="youtube")
+ 		{
+ 			var id = get_youtube_video_id(url);
+ 			var thumb = get_youtube_thumbnail(id);
+ 			details = [id, thumb, src]; 
+ 		}
+ 		else if(src=="vimeo")
+ 		{
+ 			var vimeo_details = get_vimeo_video_id_and_thumb(url);
+ 			details = [vimeo_details.video_id, vimeo_details.thumb, src]; 		
+ 		}
+ 		return details;
+ 	}
+
+ 	/**************************************************************************
+ 	  Selecting random video from array of url's and creating its embedded link
+ 	***************************************************************************/
+ 	function select_random_video(url_arr)
+ 	{	
+ 		var random = Math.ceil(Math.random() * url_arr.length) - 1;
+ 		var details = video_details(url_arr[random]);
+ 		var embed_link = create_embedded_link(details[0], details[2]);
+ 		return embed_link;
+ 	}
+
  </script>
 
 </body>
